# missing-finder

./: .env.example  .gitignore  .ruff.toml  BIGQUERY_IMPLEMENTATION_PLAN.md  CLAUDE.md  COMMIT_MESSAGE.md  GCS_DOWNLOAD_SETUP.md  PLAN.txt  README.md  TODO.md  bq.txt  commit_message.txt  demo-notebook.ipynb  destroy.sh  limitations.ipynb  pyproject.toml  setup.sh
demo/reports/missings/: 2.insert_mock_missing_persons.sql
demo/reports/sightings/: 3.insert_mock_sightings.sql  4.insert_case_sightings_links.sql
demo/videos/metadata/: video_sources.csv  video_sources.json
sql/: 1.create_missing_persons_table.sql  2.create_sightings_table.sql  3.create_case_sightings_table.sql  4.create_video_analytics_results_table.sql
sql/DDL/: 1.create_missing_persons_table.sql  2.create_sightings_table.sql  3.create_case_sightings_table.sql  4.create_video_analytics_results_table.sql  5.create_text_embedding_model.sql
sql/DML/: insert_query_bqstudio.sql  insert_sighting_with_ml_summary.sql  insert_with_ml_summary.sql  update_missing_persons_embeddings.sql  update_sightings_embeddings.sql
src/homeward/: config.py  main.py
src/homeward/models/: case.py  form_mappers.py  video_analysis.py
src/homeward/services/: bigquery_data_service.py  bigquery_video_analysis_service.py  data_service.py  gcs_service.py  geocoding_service.py  mock_data.py  mock_data_service.py  mock_video_analysis_service.py  service_factory.py  video_analysis_service.py
src/homeward/ui/components/: cases_table.py  footer.py  kpi_cards.py  missing_person_form.py  missing_person_form.py.backup  sighting_form.py  sightings_table.py
src/homeward/ui/pages/: case_detail.py  dashboard.py  new_report.py  new_sighting.py  sighting_detail.py
src/homeward/utils/: form_utils.py
tests/: conftest.py  test_case_detail_page.py  test_config.py  test_dashboard_simple.py  test_form_mappers.py  test_form_utils.py  test_form_validation_bug.py  test_form_validation_fix.py  test_models.py  test_new_report_page.py  test_new_sighting_page.py  test_services.py  test_ui_components_simple.py
