[project]
name = "homeward"
version = "0.1.0"
description = "AI-powered missing persons finder using Google Cloud Platform"
authors = [
    {name = "Danilo Trombino", email = "danilotrombino@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    # Web Framework
    "nicegui>=1.4.0",
    
    # Google Cloud Platform
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-storage>=2.10.0",
    
    # Environment and Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",

    # Utilities
    "typing-extensions>=4.7.0",
    
    # Logging and Monitoring
    "structlog>=23.1.0",
    "google-cloud-logging>=3.8.0",
    
    # Authentication
    "google-auth>=2.22.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
]

cloud-functions = [
    "functions-framework>=3.4.0",
]

[project.scripts]
homeward = "homeward.main:main"

[project.urls]
Homepage = "https://github.com/trowdan/homeward-missing-persons-finder"
Repository = "https://github.com/trowdan/homeward-missing-persons-finder"
Issues = "https://github.com/trowdan/homeward-missing-persons-finder/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py39']
include = '\.pyi?$'
line-length = 88

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --cov=homeward"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]